src/objects/Case_Priority_Criteria__c.object
<CustomObject>
    <description>Created by Shridevi, as part of SIR SFDC-207: contains the data set which decides the case priority.</description>
    <fields>
        <fullName>Field_Value__c</fullName>
        <description>Created as part SIR SFDC-207</description>
        <label>Field Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <description>Created as part of SIR SFDC-207</description>
        <label>Field</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Object__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Type</fullName>
                </value>
                <value>
                    <fullName>Sub Type</fullName>
                </value>
                <value>
                    <fullName>Contact Service Level</fullName>
                </value>
                <value>
                    <fullName>Priority</fullName>
                </value>
                <value>
                    <fullName>Origin</fullName>
                </value>
                <value>
                    <fullName>Ent-Priority</fullName>
                </value>
                <value>
                    <fullName>Product Lvl 1</fullName>
                </value>
                <value>
                    <fullName>Product Lvl 2</fullName>
                </value>
                <value>
                    <fullName>Product Lvl 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>Created as part of SIR SFDC-207.</description>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Entitlement</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>Created as part of SIR SFDC-207</description>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Case Priority Criteria</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Field__c</columns>
        <columns>Field_Value__c</columns>
        <columns>Score__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CasePriorityId-{00000}</displayFormat>
        <label>Case Priority Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Priority Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>